2000-11-14  Akim Demaille  <akim@epita.fr>

	Use AC_MSG_ERROR in `config.status', but adjust AC_MSG_* to use $0
	instead of hard coded `configure'.

	* acgeneral.m4 (AC_COPYRIGHT): s/configure.in/__file__/.
	(_AC_INIT_DEFAULTS_FDS): Append to AC_FD_LOG instead of creating
	it.  No longer insert the configure banner.
	(_AC_INIT_DEFAULTS): Create config.log with the banner.
	Define `as_me'.
	(_AC_INIT_PARSE_ARGS, _AC_INIT_PREPARE, AC_MSG_NOTICE)
	(AC_MSG_CHECKING, AC_MSG_RESULT, AC_MSG_RESULT_UNQUOTED)
	(AC_MSG_WARN, AC_MSG_ERROR, AC_MSG_ERROR, AC_TRY_CPP)
	(_AC_COMPILE_IFELSE, _AC_LINK_IFELSE, _AC_RUN_IFELSE)
	(_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS, _AC_PROG_F77_V_OUTPUT): Use
	`$as_me' instead of `configure'.
	(AC_OUTPUT): Get rid of the UCA, and of the empty line when
	dumping confdefs.h into config.log.
	(_AC_OUTPUT_CONFIG_STATUS): Use _AC_INIT_DEFAULTS_FDS.
	Print a banner.
	Use AC_MSG_ERROR and AC_MSG_NOTICE.
	* acgeneral.m4 (AC_CACHE_LOAD, _AC_OUTPUT_FILES, _AC_OUTPUT_LINKS)
	(_AC_OUTPUT_HEADERS):  Use AC_MSG_NOTICE.
	* tests/semantics.at (missing templates): Adjust.

2000-11-14  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (autoconf Invocation): Explain `-W error'
	gives back traces.

2000-11-11  Pavel Roskin  <proski@gnu.org>

	* acfunctions.m4 (AC_CHECK_FUNCS): Add missing m4 quotes.
	(AC_FUNC_GETPGRP): Likewise.
	* acspecific.m4 (AC_AIX): Likewise.
	* m4/init.m4 (AM_INIT_AUTOMAKE): Likewise.
	* m4/missing.m4 (AM_MISSING_PROG): Likewise.
	* m4/sanity.m4 (AM_SANITY_CHECK): Likewise.

2000-11-11  Pavel Roskin  <proski@gnu.org>

	* acfunctions.m4: Always quote first argument of AC_MSG_ERROR,
	AC_MSG_WARN, AC_MSG_CHECKING, AC_MSG_RESULT,
	AC_MSG_RESULT_UNQUOTED.
	* acgeneral.m4: Likewise.
	* aclang.m4: Likewise.
	* acspecific.m4: Likewise.
	* configure.in: Likewise.
	* doc/autoconf.texi: Likewise.

2000-11-10  Pavel Roskin  <proski@gnu.org>

	* doc/autoconf.texi (Particular Structures): Fix examples for
	AC_STRUCT_ST_BLKSIZE and AC_STRUCT_ST_RDEV.
